<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Image Searcher</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="grid_image_description">Grid Image</string>
    <string name="search_title">Search</string>
    <string name="settings_title">Settings</string>
    <string name="search_hint">Enter Search</string>
    <string name="title_activity_image_view">ImageViewActivity</string>
    <string name="title_activity_search_settings">SearchSettingsActivity</string>
    <string name="advance_search_settings">Advance Search Settings</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>
    <string name="huge">Huge</string>
    <string name="face">Face</string>
    <string name="photo">Photo</string>
    <string name="clip_art">Clip Art</string>
    <string name="line_art">Line Art</string>
    <string name="color_filter">Color Filter</string>
    <string name="site_filter">Site Filter</string>
    <string name="enter_url">Enter Url</string>
    <string name="save_settings">OK</string>

</resources>
