<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SearchSettingsActivity" >

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/advance_search_settings"
        android:textAppearance="?android:attr/textAppearanceLarge" />

	<RadioGroup android:id="@+id/toggleSizeGroup"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/textTitle"
	        android:layout_marginTop="24dp"
	        android:orientation="horizontal" >
	
		<ToggleButton
		    android:id="@+id/btnSizeSmall"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleSize"
		    android:tag="icon"
		    android:textOff="Small"
		    android:textOn="@string/small"
		    android:textSize="10sp" />
		
		<ToggleButton
		    android:id="@+id/btnSizeMedium"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleSize"
		    android:tag="medium"
		    android:textOff="@string/medium"
		    android:textOn="@string/medium"
		    android:textSize="10sp" />
		
		<ToggleButton
		    android:id="@+id/btnSizeLarge"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleSize"
		    android:tag="large"
		    android:textOff="@string/large"
		    android:textOn="@string/large"
		    android:textSize="10sp" />
		
		<ToggleButton
		    android:id="@+id/btnSizeHuge"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleSize"
		    android:tag="huge"
		    android:textOff="@string/huge"
		    android:textOn="@string/huge"
		    android:textSize="10sp" />

	</RadioGroup> 
	<RadioGroup android:id="@+id/toggleTypeGroup"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/toggleSizeGroup"
	        android:layout_marginTop="24dp"
	        android:orientation="horizontal" >
	
		<ToggleButton
		    android:id="@+id/btnTypeFace"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleType"
		    android:tag="face"
		    android:textOff="@string/face"
		    android:textOn="@string/face"
		    android:textSize="10sp" />
		
		<ToggleButton
		    android:id="@+id/btnTypePhoto"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleType"
		    android:tag="photo"
		    android:textOff="@string/photo"
		    android:textOn="@string/photo"
		    android:textSize="10sp" />
		
		<ToggleButton
		    android:id="@+id/btnSizeLarge"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleType"
		    android:tag="clipart"
		    android:textOff="@string/clip_art"
		    android:textOn="@string/clip_art"
		    android:textSize="10sp" />
		
		<ToggleButton
		    android:id="@+id/btnSizeHuge"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:layout_weight="1"
		    android:onClick="onToggleType"
		    android:tag="lineart"
		    android:textOff="@string/line_art"
		    android:textOn="@string/line_art"
		    android:textSize="10sp" />

	</RadioGroup>

	<TextView
	    android:id="@+id/textColorsLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/toggleTypeGroup"
	    android:layout_below="@+id/toggleTypeGroup"
	    android:layout_marginTop="20dp"
	    android:layout_marginRight="8dp"
	    android:text="@string/color_filter"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<Spinner
	    android:id="@+id/spinColorFilter"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="right"
	    android:layout_alignTop="@+id/textColorsLabel"
	    android:layout_toRightOf="@+id/textColorsLabel" />

	<TextView
	    android:id="@+id/textSiteLabel"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignLeft="@+id/textColorsLabel"
	    android:layout_below="@+id/spinColorFilter"
	    android:layout_marginTop="20dp"
	    android:text="@string/site_filter"
	    android:textAppearance="?android:attr/textAppearanceMedium" />

	<EditText
	    android:id="@+id/editSiteFilter"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignTop="@+id/textSiteLabel"
	    android:layout_alignLeft="@+id/spinColorFilter"
	    android:layout_toRightOf="@+id/textSiteLabel"
	    android:singleLine="true"
	    android:hint="@string/enter_url"
	    android:ems="10" >
	    <requestFocus />
	</EditText>

	<Button
	    android:id="@+id/btnSaveSettings"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentRight="true"
	    android:text="@string/save_settings"
	    android:onClick="onSaveButton" />
			
</RelativeLayout>
